# IDS-COLLECTOR

./: .gitignore  Makefile  README.md  docker-compose.yml  example.txt  feedback-2026-07-15.md  otel-collector-config.yaml  package-lock.json
.github/workflows/: cd.yml  ci.yml
backend/: requirements.txt
backend/app/: config.py  es_client.py  main.py  normalizer.py  schemas.py
dashboard/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js  vitest.config.js
dashboard/dist_check/: index.html
dashboard/dist_check2/: index.html
dashboard/remotion-arch-demo/: README.md  check_entry2.tmp.js  check_entry3.tmp.js  check_entry4.tmp.js  check_entry5.tmp.js  package-lock.json  package.json
dashboard/remotion-intro/: README.md  package-lock.json  package.json
dashboard/remotion-onboarding/: README.md  check_entry.tmp.js  package-lock.json  package.json
dashboard/src/: AdminAuditView.jsx  App.jsx  AttackMatrixView.jsx  Auditlog.js  CriticalAlertPopup.jsx  IncidentsView.jsx  InfrastructureView.jsx  LiveTicker.jsx  LogDashboard.jsx  Uselivefeed.js  WorldMap.jsx  badges.jsx  index.css  main.jsx
docs/: BACKEND_ENGINEERING_NOTES.md
ingest/: requirements.txt  test_client.py
ingest/app/: config.py  consumer.py  main.py  producer.py  (+1 more)
presentation/: SENTINEL-OPS_최종발표.pptx  SENTINEL-OPS_최종발표_대본_v2.md
servers/: .env.example  docker-compose.yml
servers/shared/: pyproject.toml
servers/shared/ids_shared/: k8s_constants.py  mitre_mapping.py  schemas.py
(+300 files in other folders)
