[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ids-shared"
version = "0.1.0"
description = "normalizer/correlation-engine이 공유하는 NormalizedEvent 스키마"
requires-python = ">=3.11"
dependencies = ["pydantic>=2"]

[tool.setuptools]
packages = ["ids_shared"]
